--- a/_posts/2020-07-27-Clase-I.md
+++ b/_posts/2020-07-27-Clase-I.md
@@ -2,26 +2,109 @@
 title: Clase I
 ---
 
-### Probar las siguientes propiedades del producto vectorial:
+## Tareas de la clase I
 
-1. \begin{equation}
-   \vec{u}\cdot\left(\vec{u}\times\vec{v}\right)=0
-   \end{equation}
+### Probar que $$\mathbb{R}^{3}$$ es un espacio vectorial.
+
+De la definición de espacio vectorial dada en clase, tomemos tres vectores 
+$$\vec{x}, \vec{y}, \vec{z} \in \mathbb{R}^{3}$$ tales que cada vector sea de la forma 
+$$\vec{u}=(u_{1}, u_{2}, u_{3})$$ con cada entrada $$u_{i} \in \mathbb{R}$$ y escalares 
+$$\alpha,\beta \in \mathbb{R}$$; verificamos entonces para los elementos de $$\mathbb{R}^{3}$$:
+
+1. $$\vec{x} + \vec{y} = (x_{1}, x_{2}, x_{3}) + (y_{1}, y_{2}, y_{3}) = 
+(x_{1} + y_{1}, x_{2} + y_{2}, x_{3} + y_{3})$$
+
+	Dado que, si $$u_{i}=x_{i}+y_{i}$$ entonces $$(u_{1}, u_{2}, u_{3}) \in \mathbb{R}^{3}$$ y por tanto $$\vec{x} + \vec{y} \in \mathbb{R}^{3}$$
+
+2. Considerando la propiedad conmutativa de los reales ($$a+b=b+a$$)
+
+	$$\begin{split}
+	\vec{x} + \vec{y} & = (x_{1}, x_{2}, x_{3}) + (y_{1}, y_{2}, y_{3}) \\
+        	          & = (x_{1} + y_{1}, x_{2} + y_{2}, x_{3} + y_{3}) \\
+                	  & = (y_{1} + x_{1}, y_{2} + x_{2}, y_{3} + x_{3}) \\
+	                  & = (y_{1}, y_{2}, y_{3}) + (x_{1}, x_{2}, x_{3}) \\
+        	          & = \vec{y} + \vec{x}
+	\end{split}
+	$$
+
+3. Considerando ahora la propiedad distributiva de los reales $$(a+b)+c=a+(b+c)$$ verificamos que:
+
+	$$\begin{split}
+	(\vec{x} + \vec{y}) + \vec{z} & = \left((x_{1}, x_{2}, x_{3}) + (y_{1}, y_{2}, y_{3})\right) + (z_{1},z_{2}, z_{3}) \\
+	                              & = (x_{1} + y_{1}, x_{2} + y_{2}, x_{3} + y_{3}) + (z_{1}, z_{2}, z_{3}) \\
+	                              & = (x_{1} + y_{1} + z_{1}, x_{2} + y_{2} + z_{2}, x_{3} + y_{3} + z_{3}) \\
+	                              & = (x_{1}, x_{2}, x_{3}) + (y_{1} + z_{1}, y_{2} + z_{2}, y_{3} + z_{3}) \\
+	                              & = \vec{x} + (\vec{y} + \vec{z})
+	\end{split}$$
+
+4. Sea $$0_{\mathbb{R}^{3}}=\vec{0}=(0, 0, 0)$$, tenemos que 
+
+	$$\vec{x}+\vec{0} = (x_{1}, x_{2}, x_{3}) + (0, 0, 0) = (x_{1}, x_{2}, x_{3}) = \vec{x}$$
+
+5. Consideremos ahora el vector $$-\vec{x}$$ tal que $$-\vec{x}=(-x_{1}, -x_{2}, -x_{3})$$ siendo cada $$-x_{i}$$ el
+inverso aditivo de $$x_{i}$$ ambos en $$\mathbb{R}$$. Entonces:
+
+	$$\begin{split}
+	\vec{x}+(-\vec{x}) & = (x_{1}, x_{2}, x_{3}) + (-x_{1}, -x_{2}, -x_{3}) \\
+	                   & = (x_{1}-x_{1}, x_{3}-x_{2}, x_{3}-x_{3}) \\
+	                   & = (0,0,0) = 0_{\mathbb{R}^{3}} 
+	\end{split}$$
+6. Sea ahora $$\alpha\vec{x} = \alpha(x_{1}, x_{2}, x_{3}) = (\alpha x_{1}, \alpha x_{2}, \alpha x_{3})$$ y el escalar $$\nu_{i}=\alpha x_{i}$$ de $$\mathbb{R}$$ 
+como el vector $$\vec{\nu}=(\nu_{1}, \nu_{2}, \nu_{3}) \in \mathbb{R}^{3}$$ concluimos que $$\alpha\vec{x} \in \mathbb{R}^{3}$$.
+
+7. Recordando la distrivutividad de la suma y el producto de los reales $$a(b+c)=ab+ac$$:
+
+	$$\begin{split}
+	\alpha\left(\vec{x}+\vec{y}\right) & = \alpha\left((x_{1},x_{2},x_{3})+(y_{1},y_{2},y_{3})\right) \\
+	                                   & = \alpha\left((x_{1}+y_{1}),(x_{2}+y_{2}),(x_{3}+y_{3})\right)\\
+	                                   & = \left(\alpha(x_{1}+y_{1}),\alpha(x_{2}+y_{2}),\alpha(x_{3}+y_{3})\right) \\
+	                                   & = \left(\alpha x_{1}+\alpha y_{1},\alpha x_{2}+\alpha y_{2},\alpha x_{3}+\alpha y_{3}\right) \\
+	                                   & = \left(\alpha x_{1},\alpha x_{2},\alpha x_{3}\right)+\left(\alpha y_{1},\alpha y_{2},\alpha y_{3}\right) \\
+	                                   & = \alpha\left(x_{1},x_{2},x_{3}\right)+\alpha\left(y_{1},y_{2},y_{3}\right) \\
+	                                   & = \alpha\vec{x} + \alpha\vec{y}
+	\end{split}$$
+
+8. Análogo a la propiedad anterior:
+
+	$$\begin{split}
+	\left(\alpha+\beta\right)\vec{x} & = \left(\alpha+\beta\right)\left(x_{1},x_{2},x_{3}\right) \\
+	                                 & = \left((\alpha+\beta)x_{1},(\alpha+\beta)x_{2},(\alpha+\beta)x_{3}\right) \\
+	                                 & = \left(\alpha x_{1}+\beta x_{1},\alpha x_{2}+\beta x_{2},\alpha x_{3}+\beta x_{3}\right) \\
+	                                 & = \left(\alpha x_{1},\alpha x_{2},\alpha x_{3}\right)+\left(\beta x_{1},\beta x_{2},\beta x_{3}\right) \\
+	                                 & = \alpha\left(x_{1},x_{2},x_{3}\right)+\beta\left(x_{1},x_{2},x_{3}\right) \\
+	                                 & = \alpha\vec{x}+\beta\vec{x}
+	\end{split}$$
+
+9. Por la propiedad asociativa del  producto en los reales $$(ab)c=a(bc)$$, tenemos:
+
+	$$\begin{split}
+	\alpha\left(\beta\vec{x}\right) & = \alpha\left(\beta\left(x_{1},x_{2},x_{3}\right)\right) \\
+	                                & = \alpha\left(\beta x_{1},\beta x_{2},\beta x_{3}\right) \\
+	                                & = \left(\alpha\beta x_{1},\alpha\beta x_{2},\alpha\beta x_{3}\right) \\
+	                                & = (\alpha\beta)\left(x_{1},x_{2},x_{3}\right) \\
+	                                & = \left(\alpha\beta\right)\vec{x}
+	\end{split}$$
+
+10. Finalmente consideremos el escalar $$1 \in \mathbb{R}$$, dado que $$1\vec{x}=1\left(x_{1}, x_{2}, x_{3} \right)=\left(x_{1}, x_{2}, x_{3} \right)$$
+
+	$$\therefore$$ dado que los elementos de $$\mathbb{R}^{3}$$ cumplen con todos los puntos de la definición de espacio vectorial, $$\mathbb{R}^{3}$$ es un espacio vectorial $$\blacksquare$$
+
+
+### Teorema 4
+
+Los vectores $$\vec{v},\vec{w}\in\mathbb R^n$$ son ortogonales si y sólo si $$\vec{v}\cdot\vec{w}=0$$
 
 Prueba:
+Recordado que dos vectores son ortogonales si el producto escalar entre ellos es $$0$$, 
+$$\vec{v}\cdot\vec{w}=0$$; y que el producto escalar de dos vectores puede definirse 
+como $$\vec{v}\cdot\vec{w}=\|\|\vec{v}\|\|\|\|\vec{w}\|\|\cos{\theta}$$.
 
-Comenzamos recordando la definición del producto cruz y el producto punto:
+Del Teorema 3, el vector $$\vec{0}$$ tiene norma $$\|\|\vec{0}\|\|=0$$ si y solo si 
+$$\vec{v}=\vec{0}$$, tenemos que $$\vec{v}\cdot\vec{0}=\vec{0}\cdot\vec{v}=0$$ 
+entonces vale pedir que los dos vectores $$\vec{v},\vec{w}$$ sean diferentes del vector $$\vec{0}$$.
 
-\begin{split}
-\vec{w} & = \vec{u}\times\vec{v} \\
-        & = (u_{2}v_{3}-u_{3}v_{2})\hat{i} + (u_{3}v_{1}-u_{1}v_{3}) \hat{j} + 
-(u_{1}v_{2}-u_{2}v_{1}) \hat{k}
-\end{split}
-
-$$\vec{u}\cdot\vec{w}=u_{1}w_{1}+u_{2}w_{2}+u_{3}w_{3}$$
-
-Entonces solo queda hacer el producto punto de $$\vec{u}$$ y $$\vec{w}=\vec{u}\times\vec{v}$$:
-
-$$\vec{u}\cdot\vec{w} = \vec{u}\cdot\left(\vec{u}\times\vec{v}\right) = u_{1}(u_{2}v_{3}-u_{3}v_{2}) + u_{2}(u_{3}v_{1}-u_{1}v_{3}) + u_{3}(u_{1}v_{2}-u_{2}v_{1})$$
-
-$$=u_{1}u{2}v{3}-u_{1}u_{2}v_{3}$$
+Siendo entonces que si $$\vec{v}$$ y $$\vec{w}$$ son ortogonales, el angulo entre ellos es de $$\theta=90^o$$ 
+entonces $$\vec{v}\cdot\vec{w}=\|\vec{v}\|\|\vec{w}\|\cos{90^o}=\|\vec{v}\|\|\vec{w}\|0=0$$. 
+Ahora supongamos que $$\vec{v}\cdot \vec{w}=0$$ entonces tenemos que $$\vec{v}\cdot\vec{w}=\|\vec{v}\|\|\vec{w}\|\cos{\theta} = 0$$ 
+teniendo entonces que $$\|\|\vec{v}\|\|=0$$ o $$\|\|\vec{w}\|\|=0$$ o $$\cos{\theta}=0$$, quitando entonces el caso trivial de que uno o ambos vectores 
+sean el vector $$\vec{0}$$, solo queda la opción $$\cos{\theta}=0$$ de modo que $$\theta=90^{o}$$ y entonces $$\vec{v}$$ y $$\vec{w}$$ son ortogonales. $$\blacksquare$$
