Post Clase I actaulizado

--- a/_posts/2020-07-28-Clase-I.md
+++ b/_posts/2020-07-28-Clase-I.md
@@ -90,6 +90,64 @@ como el vector $$\vec{\nu}=(\nu_{1}, \nu_{2}, \nu_{3}) \in \mathbb{R}^{3}$$ conc
 	$$\therefore$$ dado que los elementos de $$\mathbb{R}^{3}$$ cumplen con todos los puntos de la definición de espacio vectorial, $$\mathbb{R}^{3}$$ es un espacio vectorial $$\blacksquare$$
 
 
+### Teorema 2 (Propiedades del producto punto o escalar)
+
+Consideremos los vectores $$\vec{u},\vec{v},\vec{w} \in \mathbb R^{n}$$ y $$\alpha \in \mathbb R$$ entonces:
+
+1. $$\vec{v}\cdot \vec{0} =0$$
+
+	Prueba: Sea $$\vec{v}=(v_{1}, v_{2},\dots, v_{n})$$ y sea $$\vec{0}=(0,0,\dots,0)$$, por la definición del producto escalar tenemos que:
+
+	$$\begin{split}
+	\vec{v}\cdot\vec{0} & = (v_{1}, v_{2},\dots, v_{n})\cdot(0,0,\dots,0) \\
+                            & = v_{1}0 + v_{2}0 + \dots + v_{n}0 \\
+                            & = 0 + 0 + \dots + 0 \\
+                            & = 0 \blacksquare
+	\end{split}$$
+2. $$\vec{v}\cdot\vec{w} =\vec{w}\cdot\vec{v}$$
+	
+	Prueba: Sean $$\vec{v}=(v_{1}, v_{2},\dots, v_{n})$$ y $$\vec{w}=(w_{1}, w_{2},\dots, w_{n})$$, recordando la conmutatividad de la multiplicacion de los reales:
+
+	$$\begin{split}
+	\vec{v}\cdot\vec{w} & = (v_{1}, v_{2},\dots, v_{n})\cdot(w_{1}, w_{2},\dots, w_{n}) \\
+	                    & = v_{1}w_{1} + v_{2}w_{2} + \dots + v_{n}w_{n} \\
+	                    & = w_{1}v_{1} + w_{2}v_{2} + \dots + w_{n}v_{n} \\
+	                    & = (w_{1}, w_{2},\dots, w_{n})\cdot(v_{1}, v_{2},\dots, v_{n}) \\
+	                    & = \vec{w}\cdot\vec{v} \blacksquare
+	\end{split}$$ 
+
+3. $$\vec{u}\cdot(\vec{v}+\vec{w})=\vec{u}\cdot\vec{v}+\vec{u}\cdot\vec{w}$$
+
+	Prueba: consideremos los vectores $$\vec{u}=(u_{1}, u_{2}, \dots, u_{n})$$, $$\vec{v}=(v_{1}, v_{2},\dots, v_{n})$$ y $$\vec{w}=(w_{1}, w_{2},\dots, w_{n})$$
+	y la asociatividad del producto en los reales.
+	
+	$$\begin{split}
+	\vec{u}\cdot(\vec{v}+\vec{w}) & = (u_{1}, u_{2}, \dots, u_{n})\cdot\left((v_{1}, v_{2},\dots, v_{n}) + (w_{1}, w_{2},\dots, w_{n})\right) \\
+	                              & = (u_{1}, u_{2}, \dots, u_{n})\cdot(v_{1}+w_{1}, v_{2}+w_{2},\dots, v_{n}+w_{n}) \\
+	                              & = u_{1}(v_{1}+w_{1}) + u_{2}(v_{2}+w_{2}) + \dots + u_{n}(v_{n}+w_{n}) \\
+	                              & = u_{1}v_{1} +u_{1}w_{1} + u_{2}v_{2} +u_{2}w_{2} + \dots + u_{n}v_{n} +u_{n}w_{n} \\
+	                              & = (u_{1}v_{1} + u_{2}v_{2} + \dots + u_{n}v_{n}) + (u_{1}w_{1} + u_{2}w_{2} + \dots + u_{n}w_{n}) \\
+	                              & = (u_{1}, u_{2}, \dots, u_{n})\cdot(v_{1}, v_{2},\dots, v_{n}) + (u_{1}, u_{2}, \dots, u_{n})\cdot(w_{1}, w_{2},\dots, w_{n}) \\
+	                              & = \vec{u}\cdot\vec{v} + \vec{u}\cdot\vec{w} \blacksquare
+	\end{split}$$
+
+
+4. $$(\alpha\vec{v})\vec{w}=\alpha(\vec{v}\cdot\vec{w})$$
+
+	Prueba: como en la propiedad anterior
+
+	$$\begin{split}
+	(\alpha\vec{v})\cdot\vec{w} & = \left(\alpha(v_{1},v_{2},\dots,v_{n})\right)\cdot(w_{1},w_{2},\dots,w_{n}) \\
+	                      & = (\alpha v_{1},\alpha v_{2},\dots,\alpha v_{n})\cdot(w_{1},w_{2},\dots,w_{n}) \\
+	                      & = \alpha v_{1}w_{1} + \alpha v_{2}w_{2} + \dots + \alpha v_{n}w_{n} \\
+	                      & = \alpha(v_{1}w_{1} + v_{2}w_{2} + \dots + v_{n}w_{n}) \\
+	                      & = \alpha(\vec{v}\cdot\vec{w}) \blacksquare
+	\end{split}$$
+
+### Teorema 3
+
+
+
 ### Teorema 4
 
 Los vectores $$\vec{v},\vec{w}\in\mathbb R^n$$ son ortogonales si y sólo si $$\vec{v}\cdot\vec{w}=0$$
